src/test/deca/syntax/valid/affectation-int.deca
// Description:
//    Programme minimaliste utilisant une declaration de variable puis une affectation.
//
// Resultats:
//    3
//
// Historique:
//    cree le 11/01/2024

{
    int a = 2;
    a = 3;
    print(a);
}