src/test/deca/syntax/invalid/if_variable.deca
// Description:
//    On utilise le mot if comme une variable
//
// Resultats:
//    Erreur du parser ligne 11, à la 3e quote
//
// Historique:
//    Cree le 09/01/2024

{
    int if = 3;
}
